--- a/Flo/Base.lproj/Main.storyboard
+++ b/Flo/Base.lproj/Main.storyboard
@@ -49,6 +49,9 @@
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Izg-72-hzY" customClass="MedalView" customModule="Flo" customModuleProvider="target">
+                                                <rect key="frame" x="76" y="147" width="80" height="80"/>
+                                            </imageView>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <userDefinedRuntimeAttributes>
@@ -209,6 +212,7 @@
                         <outlet property="counterView" destination="7Dp-sF-9ER" id="A45-Yn-N5o"/>
                         <outlet property="graphView" destination="BX6-0X-XZc" id="AL2-YK-jWi"/>
                         <outlet property="maxLabel" destination="UFc-by-GX4" id="rIK-hG-bkq"/>
+                        <outlet property="medalView" destination="Izg-72-hzY" id="DQe-Ut-X7v"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
